# hare

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  pyproject.toml
data/skills/: builtin.json
examples/: skill_generation.py  study_plan.py
experiments/: amazon_experiment.py  divergence_demo.py  lamp_experiment.py  longlamp_experiment.py  pens_experiment.py  simulation.py  study_design.md  train_attention.py  train_lamp.py
hare/: __init__.py
hare/attention/: __init__.py  cross_attention.py  learnable_cross_attention.py
hare/bandits/: __init__.py  attentive_bandit.py  learnable_hare.py  linucb.py
hare/data/: collect.py  skills.py
hare/evaluation/: __init__.py  amazon.py  baselines.py  lamp.py  longlamp.py  pens.py
hare/portal/: __init__.py  app.py
hare/synthesis/: __init__.py  generator.py  training.py
hare/utils/: __init__.py  embeddings.py
paper/: notes.md  regret_proof.md
results/: amazon_Digital_Music_results.json  lamp4_results.json  lamp5_results.json  lamp7_results.json
scripts/: push_results_to_hf.py  setup_hf.py
tests/: test_amazon.py  test_hare.py  test_lamp_multi.py  test_learnable_attention.py  test_longlamp_pens.py  test_skills_data.py  test_training.py
