[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hare"
version = "0.1.0"
description = "HARE: Hybrid Attention-Reinforced Exploration for Generative Recommendation"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Dominic Tanzillo"},
]
dependencies = [
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "transformers>=4.40",
    "torch>=2.2",
    "datasets>=2.18",
    "sentence-transformers>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
